hphp/hack/test/typecheck/inout/bad_inout_use_lvalue8.php.exp
File "bad_inout_use_lvalue8.php", line 15, characters 5-15:
You cannot decorate this argument as inout (Parsing[1002])
